--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>elo</title>
+    <title>BingBong</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <canvas id="canvas"></canvas>
 
-    <div id="App"></div>
-
-    <script src="./bundle.js"></script>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
