--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div id="header">click somewhere</div>
     <canvas id="canvas"></canvas>
 
     <script src="dot.js"></script>
