--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div id="header">click somewhere</div>
     <canvas id="canvas"></canvas>
+    <canvas id="canvas2"></canvas>
 
     <script src="dot.js"></script>
     <script src="script.js"></script>
