switch to pizzicato.js

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <canvas id="canvas"></canvas>
     <canvas id="canvas2"></canvas>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pizzicato/0.6.4/Pizzicato.min.js" integrity="sha512-K+cPWcoDCr2JFFfe912LrvRUQbVJuWNfeWK5r/HrmpDs8ELrsjVib8Fs5oAxzu76fG66ajGhDLvvcxBbeEzl9g==" crossorigin="anonymous"></script>
     <script src="dot.js"></script>
     <script src="script.js"></script>
 </body>
